--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ cycler==0.12.1
 debugpy==1.8.0
 decorator==5.1.1
 defusedxml==0.7.1
+efficient-apriori==2.0.3
 exceptiongroup==1.1.3
 executing==2.0.1
 fastjsonschema==2.18.1
@@ -57,6 +58,7 @@ MarkupSafe==2.1.3
 matplotlib==3.8.2
 matplotlib-inline==0.1.6
 mistune==3.0.2
+mlxtend==0.23.0
 nbclient==0.9.0
 nbconvert==7.11.0
 nbformat==5.9.2
